--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -16,7 +16,7 @@
 
 	<!--
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/default.min.css">
-	<link rel="stylesheet" type="text/css" href="http://bootswatch.com/readable/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="http://bootswatch.com/united/bootstrap.min.css">
 	-->
 	<link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/readable.bootstrap.min.css")">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/highlight.min.js"></script>
@@ -24,11 +24,15 @@
 
 	<link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/style.css")">
 
+
+	<link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/prism.css")">
+	<script type="text/javascript" src="@routes.Assets.at("javascripts/prism.js")"></script>
+	
 	<script type="text/javascript" src="@routes.Assets.at("javascripts/nba.js")"></script>
 </head>
 <body>
 	<nav class="navbar navbar-default" role="navigation">
-		<div class="container-fluid">
+		<div class="container">
 			<div class="navbar-header">
 				<span class="navbar-brand">CECS 323 NBA Team</span>
 			</div>
@@ -37,45 +41,66 @@
 	<div id="menu-choice" class="container">
 		<div class="row">
 			<div class="command-block col-md-4">
-				<div class="jack-in" data-command="1">
+				<div class="jack-in alert alert-success" data-command="1">
+					<h2>Query 1</h2>
+					<hr />
+					<p>Find the teams that have a total weight over 3300 pounds and the staff members of those teams.</p>
+				</div>
+			</div>
+			<div class="command-block col-md-4">
+				<div class="jack-in alert alert-info" data-command="2">
+					<h2>Query 2</h2>
+					<hr />
+					<p>Find all players and staff members in the Clippers team.</p>
+				</div>
+			</div>
+			<div class="command-block col-md-4">
+				<div class="jack-in alert alert-danger" data-command="3">
+					<h2>Query 3</h2>
+					<hr />
+					<p>Find all Power Forwards in the database along with their team name.</p>
+				</div>
+			</div>
+			<div class="command-block col-md-4">
+				<div class="jack-in alert alert-danger" data-command="4">
+					<h2>Query 4</h2>
+					<hr />
+					<p>Find the team playing the most away games in December and the head coach for this team.</p>
+				</div>
+			</div>
+			<div class="command-block col-md-4">
+				<div class="jack-in alert alert-success" data-command="5">
+					<h2>Query 5</h2>
+					<hr />
+					<p>Find the conference with the highest total ranked teams.</p>
+				</div>
+			</div>
+			<div class="command-block col-md-4">
+				<div class="jack-in alert alert-info" data-command="6">
+					<h2>Query 6</h2>
+					<hr />
+					<p>Find the teams playing 2 or more games at Staples Center that have no games broadcast on NBA TV.</p>
+				</div>
+			</div>
+			<div class="command-block col-md-4">
+				<div class="jack-in alert alert-info" data-command="7">
 					<h2>Insert</h2>
 					<hr />
 					<p>Insert a new team into the Team table.</p>
 				</div>
 			</div>
 			<div class="command-block col-md-4">
-				<div class="jack-in" data-command="2">
+				<div class="jack-in alert alert-danger" data-command="8">
 					<h2>Update</h2>
 					<hr />
 					<p>Alter the data-command of an attribute of all rows that fill the given condition.</p>
 				</div>
 			</div>
 			<div class="command-block col-md-4">
-				<div class="jack-in" data-command="3">
+				<div class="jack-in alert alert-success" data-command="9">
 					<h2>Delete</h2>
 					<hr />
 					<p>Delete the team that was inserted earlier.</p>
-				</div>
-			</div>
-			<div class="command-block col-md-4">
-				<div class="jack-in" data-command="4">
-					<h2>Query 1</h2>
-					<hr />
-					<p>Find the division with the highest rank.</p>
-				</div>
-			</div>
-			<div class="command-block col-md-4">
-				<div class="jack-in" data-command="5">
-					<h2>Query 2</h2>
-					<hr />
-					<p>Find the teams that do not belong to a network.</p>
-				</div>
-			</div>
-			<div class="command-block col-md-4">
-				<div class="jack-in" data-command="6">
-					<h2>Query 3</h2>
-					<hr />
-					<p>Find teams that are never playing as the home team.</p>
 				</div>
 			</div>
 		</div>
@@ -84,8 +109,9 @@
 		<button id="return-block" class="btn btn-default btn-lg">
 			<span class="glyphicon glyphicon-arrow-left"></span>
 		</button>
+		<h1>SQL Code</h1>
+		<pre><code id="code-section" class="language-sql"></code></pre>
 		<h1>Result Data</h1>
-		<pre><code id="code-section" class="sql"></code></pre>
 		<table id="result-table" class="table table-striped"></table>
 	</div>
 </body>
