--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,15 +1,24 @@
+body {
+	background-image: url('/assets/images/contemporary_china.png');
+}
 .command-block {
 	padding: 0.75em;
 	text-align: center;
-    color: white;    
 	height: 13em;
 }
 
 .jack-in {
+	color: black;
+    /*
+	text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+    color: white;
+    background-color: #156711;
     background-color: #0D405C;
+    color: pink;
+    */
     padding: 0.75em;
     height: 100%;
-	border-radius: 10px;
+	border-radius: 20px;
 }
 
 .lift-up {
