--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,14 +8,8 @@ body {
 }
 
 .jack-in {
-	color: black;
-    /*
-	text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
-    color: white;
-    background-color: #156711;
-    background-color: #0D405C;
-    color: pink;
-    */
+	color: white;
+	text-shadow: 2px 2px 0px rgba(0,0,0,0.2);
     padding: 0.75em;
     height: 100%;
 	border-radius: 20px;
@@ -34,4 +28,9 @@ body {
 	left: 1em;
 	width: 3em;
 	height: 3em;
+}
+
+#result-table {
+	background-color: white;
+	font-size: 1.25em;
 }
