--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -87,7 +87,7 @@
 			<div class="command-block col-md-4">
 				<div class="jack-in alert alert-success" data-command="9">
 					<h1>Delete</h1>
-					<p>Delete the team that was inserted earlier.</p>
+					<p>Deletes the Rift division.</p>
 				</div>
 			</div>
 		</div>
