--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,9 +8,9 @@ body {
 }
 
 .jack-in {
-	color: white;
+	color: rgba(255, 255, 255, 1);
 	text-shadow: 2px 2px 0px rgba(0,0,0,0.2);
-    padding: 0.75em;
+    padding: 0.75em 2em;
     height: 100%;
 	border-radius: 20px;
 }
@@ -24,13 +24,28 @@ body {
 
 #return-block {
 	position: fixed;
-	top: 5em;
-	left: 1em;
-	width: 3em;
+	top: 	7em;
+	left: 	1em;
+	width: 	3em;
 	height: 3em;
 }
 
 #result-table {
 	background-color: white;
 	font-size: 1.25em;
+}
+
+#header-block {
+	padding: 0em;
+}
+
+#myPageHeader {
+	display: block;
+	width: 100%;
+	text-align: center;
+}
+
+.tight-panel {
+	margin: 0em;
+	margin-bottom: 0em;
 }
